--- a/Grid Modern Art 3/style.css
+++ b/Grid Modern Art 3/style.css
@@ -7,11 +7,11 @@
 .container {
   display: grid;
   background-color: rgb(27, 27, 27);
-  grid-template-columns: repeat(11, 1fr);
-  grid-template-rows: repeat(7, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(16, 1fr);
 
-  height: 700px;
-  width: 1100px;
+  height: 1600px;
+  width: 500px;
   margin: auto;
 }
 
@@ -51,10 +51,8 @@
 }
 
 .div6 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 2;
-  grid-row-end: 6;
+  grid-column: span 4;
+  grid-row: span 4;
   background-image: url(images/06.jpg);
 }
 
