--- a/Grid Modern Art 3/style.css
+++ b/Grid Modern Art 3/style.css
@@ -13,6 +13,8 @@
   height: 1600px;
   width: 500px;
   margin: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .grid-item {
@@ -50,22 +52,16 @@
   background-image: url(images/05.jpg);
 }
 
-.div6 {
-  grid-column: span 4;
-  grid-row: span 4;
-  background-image: url(images/06.jpg);
+.div8 {
+  grid-column: span 1;
+  grid-row: span 3;
+  background-image: url(images/08.jpg);
 }
 
 .div7 {
   grid-column: span 2;
   grid-row: span 2;
   background-image: url(images/07.jpg);
-}
-
-.div8 {
-  grid-column: span 1;
-  grid-row: span 3;
-  background-image: url(images/08.jpg);
 }
 
 .div9 {
@@ -92,16 +88,28 @@
   background-image: url(images/12.jpg);
 }
 
-.div13 {
-  grid-column: span 2;
-  grid-row: span 1;
-  background-image: url(images/13.jpg);
+.div6 {
+  grid-column: span 4;
+  grid-row: span 4;
+  background-image: url(images/06.jpg);
 }
 
 .div14 {
   grid-column: span 1;
   grid-row: span 3;
   background-image: url(images/14.jpg);
+}
+
+.div17 {
+  grid-column: span 1;
+  grid-row: span 3;
+  background-image: url(images/17.jpg);
+}
+
+.div13 {
+  grid-column: span 2;
+  grid-row: span 1;
+  background-image: url(images/13.jpg);
 }
 
 .div15 {
@@ -114,12 +122,6 @@
   grid-column: span 2;
   grid-row: span 2;
   background-image: url(images/16.jpg);
-}
-
-.div17 {
-  grid-column: span 1;
-  grid-row: span 3;
-  background-image: url(images/17.jpg);
 }
 
 .div18 {
